--- a/Lounge/gtk-3.0/gtk-contained.css
+++ b/Lounge/gtk-3.0/gtk-contained.css
@@ -1038,13 +1038,13 @@ scrollbar.vertical slider { background-image: -gtk-scaled(url("assets/scrollbar-
 
 scrollbar.fine-tune slider:hover:active { background-image: none; background-color: #7194ae; box-shadow: inset 0 0 0 1px #4a7da2; }
 
-scrollbar.overlay-indicator:not(.dragging):not(.hovering) { border-color: transparent; opacity: 0.4; background-color: transparent; }
+scrollbar.overlay-indicator:not(.dragging):not(.hovering) { border-color: transparent; background-color: transparent; }
 
 scrollbar.overlay-indicator:not(.dragging):not(.hovering) trough { border-image: none; }
 
-scrollbar.overlay-indicator:not(.dragging):not(.hovering) slider { margin: 0; min-width: 3px; min-height: 3px; border-radius: 1px; background-color: #101010; border: 1px solid white; box-shadow: none; background-image: none; }
+scrollbar.overlay-indicator:not(.dragging):not(.hovering) slider { margin: 0; min-width: 3px; min-height: 3px; border-radius: 1px; background-color: rgba(16, 16, 16, 0.4); border: 1px solid rgba(255, 255, 255, 0.4); box-shadow: none; background-image: none; }
 
-scrollbar.overlay-indicator:not(.dragging):not(.hovering) button { min-width: 5px; min-height: 5px; background-color: #101010; background-clip: padding-box; border-radius: 100%; border: 1px solid white; -gtk-icon-source: none; }
+scrollbar.overlay-indicator:not(.dragging):not(.hovering) button { min-width: 5px; min-height: 5px; background-color: rgba(16, 16, 16, 0.4); background-clip: padding-box; border-radius: 100%; border: 1px solid rgba(255, 255, 255, 0.4); -gtk-icon-source: none; }
 
 scrollbar.overlay-indicator:not(.dragging):not(.hovering).horizontal slider { margin: 0 2px; min-width: 41px; }
 
